# Video-Capture

./: CMakeLists.txt  cropdialog.cpp  cropdialog.h  exportpanel.cpp  exportpanel.h  helpers.h  imageviewerdialog.cpp  imageviewerdialog.h  libraryitemdelegate.cpp  libraryitemdelegate.h  librarypanel.cpp  librarypanel.h  librarywidget.cpp  librarywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  playerpanel.cpp  playerpanel.h  resources.qrc  sidepanel.cpp  sidepanel.h  stylepanel.cpp  stylepanel.h  videoprocessor.cpp  videoprocessor.h  videowidget.cpp  videowidget.h  videoworker.cpp  videoworker.h  viewpanel.cpp  viewpanel.h
